# uctd-review-api

./: README.md
full_version/: .gitignore  README.md  config.yaml  logging_config.yaml  pyproject.toml  start.cmd  start.sh
full_version/src/uctd/review_api/: config.py  constants.py  logging.py  main.py  models.py  utils.py
full_version/src/uctd/review_api/db/: __init__.py  models.py
full_version/src/uctd/review_api/routers/: __init__.py  reviews.py
full_version/src/uctd/review_api/schemes/: __init__.py  reviews.py
simple_version/: .gitignore  README.md  main.py
